    - AccelerometerAdaptor, MagnetometerAdaptor and RotationSensorChannel interval rangelist has been limited to certain sizes.
    - AccelerometerSensorChannel, RotationSensorChannel and MagnetometerSensorChannel downsamples data before propagating it.
  * Config-class has now more friendly API.
  * sensordtestapp improvements.
  * API documentation improvements.

  [Shenghua Liu]
  * Make sensortestapp thread safe in exiting
  * Fix sensord-tests-install 
  * Fix sensordtestapp for qt apt to print out proximity reflectance data
  * Fix the Proximity metatype registration problem
  * ProximityAdaptor now stores reflectance reading (Fixes: NB#234186)

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Fri, 18 Mar 2011 11:19:25 +0200

sensord (0.6.40) unstable; urgency=low

  [Antti Virtanen]
  * SensorManager::releaseSensor() now removes bufferSize and bufferInterval settings for session from the node.
  * Qt-api interface classes now directly access methods from dbus adaptor instead of using properties. Fixes: NB#181522.
  * Refactored sensor interface and adaptor classes.
  * AbstractSensorChannelInterface does not anymore inherit from QDBusAbstractInterface.

  [Shenghua Liu]
  * Code cleanup 

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Fri, 04 Mar 2011 14:27:18 +0200

sensord (0.6.39) unstable; urgency=low

  [Pia Niemela]
  * Added setDataRangeIndex utility for easier range swapping
  * Fixed MOBILITY-2535
  * Fixed NB#223439

  [Lihan Guo]
  * Fixed coverity defects.
  * Improved sensorfw examples
  * Renamed DbusEmitter to DataEmitter and DbusEmitter::emitToDbus to DataEmitter::emitData.
  * Added test application to create multiple sensors.

  [Timo Rongas]
  * Prevent reading values from empty list in SysfsAdaptor
  * Added nodocs parameter to prevent doc building. Fixes: NB#227047
  * Chaged Screen.TopEdge default state from "top" to "left"

  [Antti Virtanen]
  * Fixed bug from SysfsAdaptor::writeToFile(): it used wrong method to get size of the buffer.